--- a/src/css/atoms/inputs.css
+++ b/src/css/atoms/inputs.css
@@ -128,6 +128,8 @@ textarea:focus-visible{
         min-width: 120px;
         max-width: 80px;
         padding-inline: var(--size-1);
+        line-height: var(--size-7);
+        font-size: var(--tfs-1);
     }
 
 }
