--- a/src/css/atoms/inputs.css
+++ b/src/css/atoms/inputs.css
@@ -1,45 +1,47 @@
 /* reset  */
 
-input:-internal-autofill-selected{
+input:-internal-autofill-selected {
     appearance: auto;
     background-image: none !important;
 }
 
-label{
+label {
     display: block;
 }
 
 
-select,option,
-input,textarea{
+select,
+option,
+input,
+textarea {
     font-size: var(--tfs-2);
     color: var(--color-text-primary);
 }
 
-input{
+input {
     line-height: var(--size-8);
     padding-inline: var(--size-2);
 }
 
 
-textarea{
+textarea {
     padding: var(--size-2);
 }
 
 select,
 input::placeholder,
-textarea::placeholder{
-    color:var(--color-text-tertiary);
+textarea::placeholder {
+    color: var(--color-text-tertiary);
 }
 
 
-select option{
+select option {
     background-color: var(--surface-container);
 }
 
 
 .input:has(input:focus-visible),
-textarea:focus-visible{
+textarea:focus-visible {
     outline: 2px solid var(--brand-primary-opacity-40);
     /* outline: unset; */
     /* background-color:oklch(from var(--color-primary-opacity-20) calc(l * .90) c h); */
@@ -47,50 +49,51 @@ textarea:focus-visible{
 
 .input,
 .select,
-.textarea{
-    border: 1px solid var(--color-primary-opacity-20);
+.textarea {
+    border: 1px solid var(--color-primary-opacity-40);
     background-color: var(--color-primary-opacity-10);
-    border-radius: var(--radii-2);
+    border-radius: 6px;
 }
 
-.input{
+.input {
     display: flex;
     align-items: center;
     padding-inline: var(--size-2);
 }
 
-.select{
+.select {
     min-height: var(--size-8);
     text-indent: var(--size-1);
 }
 
 
-.form-row-upload{
+.form-row-upload {
     background-color: var(--color-primary-opacity-4);
     border: 2px dashed var(--color-primary-opacity-40);
     transition: var(--transition-ease);
     min-height: 128px;
-    *{
-        cursor: pointer; 
+
+    * {
+        cursor: pointer;
     }
 }
 
-.form-row-upload:hover{
+.form-row-upload:hover {
     background-color: var(--color-primary-opacity-10);
     border-color: var(--color-primary);
 }
 
-.form-row-upload.form-row-upload-small{
+.form-row-upload.form-row-upload-small {
     min-height: 48px;
     padding: var(--size-2);
 }
 
-.form-row-upload:hover label{
+.form-row-upload:hover label {
     color: var(--color-primary);
 }
 
 .form-row-upload input,
-.form-row-upload label{
+.form-row-upload label {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -104,14 +107,14 @@ textarea:focus-visible{
     font-weight: 700;
 }
 
-.form-row-upload input{
+.form-row-upload input {
     z-index: 1;
     opacity: 0;
     color: transparent;
 }
 
 
-.form-row-upload #preview{  
+.form-row-upload #preview {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -122,14 +125,6 @@ textarea:focus-visible{
     height: 100%;
 }
 
-@media screen and (max-width: 768px) {
-
-    .navbar-right .input input{
-        min-width: 120px;
-        max-width: 80px;
-        padding-inline: var(--size-1);
-        line-height: var(--size-7);
-        font-size: var(--tfs-1);
-    }
-
+.navbar-right .input {
+    cursor: pointer;
 }
