--- a/src/css/layouts/layouts.css
+++ b/src/css/layouts/layouts.css
@@ -36,7 +36,7 @@
 .lt-page .lt-frame--fantasy {
   position: relative;
   overflow: hidden;
-  border:1px solid var(--brand-primary-opacity-10);
+  border:1px solid var(--brand-primary-opacity-40);
   border-radius:var(--radii-5);
   padding: 8px;
   background-color: var(--surface-container);
@@ -51,9 +51,9 @@
   /* background-image:linear-gradient(180deg,var(--brand-primary-opacity-20), var(--brand-primary-opacity-20), var(--brand-primary-opacity-10)); */
   /* background-image:var(--brand-gradient-surface-overlay); */
   background:
-    radial-gradient(circle at 40% 20%, var(--brand-primary-opacity-20), transparent 70%),
-    radial-gradient(circle at 40% 90%, var(--brand-primary-opacity-20), transparent 60%),
-    var(--brand-gradient-surface-overlay);
+    /* radial-gradient(circle at 40% 20%, var(--color-ui-white-opacity-20), transparent 70%), */
+    radial-gradient(circle at 40% 90%, var(--color-ui-white-opacity-20), transparent 60%),
+    linear-gradient(180deg, var(--brand-primary-opacity-40), var(--brand-primary-opacity-40));
   &::before,
   &::after{
     content: "";
