--- a/src/css/layouts/layouts.css
+++ b/src/css/layouts/layouts.css
@@ -89,3 +89,12 @@
     }
 
 }
+
+#three-container {
+  width: 100%;
+  max-width: 400px;
+  aspect-ratio: 16 / 9;
+  /* pas de background -> canvas transparent */
+  display: flex;
+  margin: auto;
+}
