--- a/src/css/layouts/layouts.css
+++ b/src/css/layouts/layouts.css
@@ -92,9 +92,22 @@
 
 #three-container {
   width: 100%;
-  max-width: 400px;
+  max-width: 480px;
   aspect-ratio: 16 / 9;
   /* pas de background -> canvas transparent */
   display: flex;
   margin: auto;
+  top: 80px;
+  z-index: 0;
+  position: relative;
+}
+
+#three-container canvas {
+  background: transparent !important;
+}
+
+#getting-started{
+  position: relative;
+  z-index: 9;
+  /* background-color:var(--surface-page); */
 }
