feat: rework favicon +adding card icons + add icons to menu

--- a/src/css/atoms/buttons.css
+++ b/src/css/atoms/buttons.css
@@ -6,5 +6,5 @@
 .ltds-btn--sm {
     --btn-font-size: var(--tfs-1);
     --btn-size: var(--size-7);
-    padding-inline: var(--size-2);
+    /* padding-inline: var(--size-2); */
 }
