--- a/src/css/layouts/navbar.css
+++ b/src/css/layouts/navbar.css
@@ -7,6 +7,12 @@
     z-index: 999;
 }
 
+#page-logotype svg{
+    width: 48px;
+    height: 48px;
+    transition: all 0.3s ease;
+}
+
 /* une fois scrolled */
 #menu-nav.scrolled {
     top: 0;
@@ -15,12 +21,14 @@
     /* backdrop-filter: blur(2px); */
     z-index: 1000;        /* au-dessus du contenu */
     /* border-bottom: 1px solid var(--color-border); */
-
-    #page-logotype {
+    #page-logotype svg{
         width: 40px;
         height: 40px;
     }
+
 }
+
+
 
 .navbar {
     display: flex;
