correctly adjusting remapping to portfolio and fix theme issue

--- a/src/css/atoms/inputs.css
+++ b/src/css/atoms/inputs.css
@@ -44,14 +44,14 @@ select option {
 textarea:focus-visible {
     outline: 2px solid var(--brand-primary-opacity-40);
     /* outline: unset; */
-    /* background-color:oklch(from var(--color-primary-opacity-20) calc(l * .90) c h); */
+    /* background-color:oklch(from var(--brand-primary-opacity-20) calc(l * .90) c h); */
 }
 
 .input,
 .select,
 .textarea {
-    border: 1px solid var(--color-primary-opacity-40);
-    background-color: var(--color-primary-opacity-10);
+    border: 1px solid var(--brand-primary-opacity-40);
+    background-color: var(--brand-primary-opacity-10);
     border-radius: 6px;
 }
 
@@ -68,8 +68,8 @@ textarea:focus-visible {
 
 
 .form-row-upload {
-    background-color: var(--color-primary-opacity-4);
-    border: 2px dashed var(--color-primary-opacity-40);
+    background-color: var(--brand-primary-opacity-4);
+    border: 2px dashed var(--brand-primary-opacity-40);
     transition: var(--transition-ease);
     min-height: 128px;
 
@@ -79,8 +79,8 @@ textarea:focus-visible {
 }
 
 .form-row-upload:hover {
-    background-color: var(--color-primary-opacity-10);
-    border-color: var(--color-primary);
+    background-color: var(--brand-primary-opacity-10);
+    border-color: var(--brand-primary);
 }
 
 .form-row-upload.form-row-upload-small {
@@ -89,7 +89,7 @@ textarea:focus-visible {
 }
 
 .form-row-upload:hover label {
-    color: var(--color-primary);
+    color: var(--brand-primary);
 }
 
 .form-row-upload input,
@@ -103,7 +103,7 @@ textarea:focus-visible {
     gap: 4px;
     align-items: center;
     justify-content: center;
-    color: var(--color-primary-opacity-40);
+    color: var(--brand-primary-opacity-40);
     font-weight: 700;
 }
 
