--- a/src/css/molecules/custom-select.css
+++ b/src/css/molecules/custom-select.css
@@ -19,7 +19,7 @@ custom-select {
     border: 1px solid var(--color-ui-border);
     background-color: var(--surface-page);
     padding: var(--size-2);
-    color: var(--color-primary);
+    color: var(--brand-primary);
     cursor: pointer;
     user-select: none;
 }
@@ -55,7 +55,7 @@ custom-select {
 
 .custom-select-option:hover {
     background-color: var(--surface-overlay);
-    color: var(--color-primary);
+    color: var(--brand-primary);
 }
 
 /* Afficher ou cacher le dropdown */
