feat: adding a lightmode factory-tested

--- a/src/css/atoms/buttons.css
+++ b/src/css/atoms/buttons.css
@@ -3,8 +3,7 @@
     color: var(--color-text-primary);
 }
 
-.ltds-btn--sm {
-    --btn-font-size: var(--tfs-1);
-    --btn-size: var(--size-7);
-    /* padding-inline: var(--size-2); */
+:root{
+    --text-color-btn:var(--color-ui-white);
 }
+
