--- a/src/css/utils/reset.css
+++ b/src/css/utils/reset.css
@@ -3,7 +3,11 @@
     /* --font-family-accent: "Work Sans", var(--font-family-base); */
     --font-family-accent: "Mona Sans", var(--font-family-base);
     --font-family-alt: "Oswald", var(--font-family-base);
-    --color-text-primary:var(--color-ui-white-opacity-80);
+}
+
+[data-scheme="1"][data-mode="light"],
+[data-scheme="2"][data-mode="light"]{
+    --color-text-inverted:var(--color-ui-black);
 }
 
 
