--- a/src/css/atoms/scrollbars.css
+++ b/src/css/atoms/scrollbars.css
@@ -7,12 +7,12 @@
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    /* background-color: var(--brand-primary-opacity-40); */
-    background-color: var(--color-info-active);
+    background-color: var(--brand-primary);
 }
 
 ::-webkit-scrollbar-track {
-    background-color: var(--brand-primary-opacity-20);
+    /* background-color: var(--brand-primary-opacity-20); */
+    background-color: var(--color-container);
     background-clip: content-box; /* important : fait que le bg ne déborde pas */
 }
 
