--- a/src/css/layouts/navbar.css
+++ b/src/css/layouts/navbar.css
@@ -42,3 +42,7 @@
     text-underline-offset: 8px;
     transition: var(--transition-ease);
 }
+
+.scrolled .navbar{
+    border-bottom: 1px solid var(--color-border-primary-40);
+}
