--- a/src/css/molecules/code-block.css
+++ b/src/css/molecules/code-block.css
@@ -8,8 +8,7 @@ ltds-code-block {
 
 ltds-code-block pre[class*="language-"] {
   padding: 1rem !important;
-  ;
-  background: var(--surface-container);
+  background: var(--surface-overlay);
   border: 1px solid var(--color-border);
   border-radius: var(--radii-2);
 }
