--- a/src/css/atoms/switch.css
+++ b/src/css/atoms/switch.css
@@ -18,7 +18,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: var(--surface-overlay);
+    background-color: var(--color-border);
     border-radius: 26px;
     transition: .4s;
 }
@@ -30,7 +30,7 @@
     width: 20px;
     left: 3px;
     bottom: 3px;
-    background-color: var(--color-border);
+    background-color: var(--surface-container);
     /* border: 1px solid var(--color-border); */
     border-radius: 50%;
     transition: .4s;
