--- a/src/css/layouts/layouts.css
+++ b/src/css/layouts/layouts.css
@@ -99,7 +99,7 @@
         }
     }
 
-    .lt-page .lt-frame--fantasy{
+    .lt-page .lt-frame--accentuated{
       padding:6px;
       .lt-frame-content{
         padding: 12px;
