--- a/src/css/layouts/layouts.css
+++ b/src/css/layouts/layouts.css
@@ -77,7 +77,7 @@
     radial-gradient(circle at 40% 20%, var(--color-ui-white-opacity-20), transparent 70%),
     radial-gradient(circle at 40% 90%, var(--color-ui-white-opacity-20), transparent 60%),
     linear-gradient(180deg, var(--brand-primary-opacity-40), var(--brand-primary-opacity-40)); */
-  &::before,
+  /* &::before,
   &::after{
     content: "";
     position: absolute;
@@ -88,7 +88,7 @@
   }
   &::after{
     top: calc(100% - 1px);
-  }
+  } */
 }
 
 @media screen and (max-width: 768px) {
