--- a/src/css/molecules/ltds-card.css
+++ b/src/css/molecules/ltds-card.css
@@ -197,22 +197,9 @@ ltds-card .ltds-card-footer {
 }
 
 
-.splide__slide .ltds-card{
+.splide__slide.ltds-card{
     /* background-image: var(--brand-gradient-surface-overlay); */
-    min-height: 140px;;
+    min-height: 140px;
+    --card-border:  color-mix(in oklab, var(--brand-primary) 20%, transparent);
+    /* border:1px solid var(--card-border); */
 }
-
-
-/* .splide__slide .ltds-card .ltds-card-overlay{
-    background-color: var(--card-bg2);
-    box-shadow: var(--shadow-2);
-    padding: var(--size-2);
-}
-
-
-.splide__slide .ltds-card--interactive:hover {
-    box-shadow: inset 0 0 32px 12px var(--color-ui-white-opacity-20);
-    .ltds-card-overlay{
-        transform: translateY(-2px) scale(1.02);
-    }
-} */
