--- a/src/css/layouts/layouts.css
+++ b/src/css/layouts/layouts.css
@@ -1,23 +1,27 @@
-/* [data-mode="dark"] body.home{
-  --halo-size-x: 120%;
-  --halo-size-y: 100%;
-  --halo-strength: 0.8;
-  --halo-shift-y: -8%;
-  --halo-color: var(--brand-primary-opacity-40);
-  background:     radial-gradient(
-      ellipse var(--halo-size-x) var(--halo-size-y) at 50% var(--halo-shift-y),
-      color-mix(in oklab, var(--halo-color), transparent 45%) 0%,
-      color-mix(in oklab, var(--halo-color), transparent 65%) 35%,
-      rgba(0,0,0, calc(0.35 * (1 - var(--halo-strength)))) 55%,
-      transparent 70%
-    ),
-    linear-gradient(
-      to bottom,
-      var(--surface-overlay) 0%,
-      var(--surface-page) 320px
-    );
+body.home .lt-page:nth-child(1){
+    overflow: hidden;
+}
 
-} */
+@media screen and (min-width: 1024px) {
+
+  body.home .lt-page:nth-child(1)::before{
+    content: "";
+    position: absolute;
+    z-index: 0;
+    inset: 0;
+    transform: skew(-5deg);
+    background:
+      linear-gradient(
+        to right,
+        transparent 0%,
+        transparent 50%,
+        var(--surface-overlay) 50%,
+        var(--surface-overlay) 320px
+      );
+  }
+  
+}
+
 
 [data-mode="dark"] body::before{
   content: "";
@@ -46,7 +50,7 @@
 
 .lt-page{
     /* Cadre de base */
-    background-color: var(--surface-page);
+    /* background-color: var(--surface-page); */
     > .lt-frame {
         background-color: var(--brand-primary-opacity-20);
         width: 100%;
